<!--
  ~ Copyright (c) 2015 Zpotdrop. All rights reserved.
  -->

<resources>
    <string name="app_name">Zpotdrop</string>
    <string name="action_settings">Settings</string>

    <!--LOGIN-->
    <string name="welcome_to">Welcome to</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="continue_text">Continue</string>
    <string name="or">OR</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="not_yet_on_zpotdrop">Not yet on zpotdrop?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="logging_in">Logging in...</string>
    <string name="login_error">Login Error</string>
    <string name="error">Error</string>
    <string name="success">Success</string>

    <!--REGISTER-->
    <string name="password_again">Password again</string>
    <string name="back">Back</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="date_of_birdth">Date of birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="private_gender">Private</string>
    <string name="sign_up">Sign up</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Private</item>
        <item>Female</item>
    </string-array>
    <string name="msg_please_enter_your_email">Please enter your email</string>
    <string name="msg_please_enter_your_password">Please enter your password</string>
    <string name="msg_please_confirm_your_password">Please confirm your password</string>
    <string name="msg_please_enter_first_name">Please enter first name</string>
    <string name="msg_please_enter_last_name">Please enter last name</string>
    <string name="msg_please_enter_phone_number">Please enter phone number</string>
    <string name="msg_please_enter_your_birthday">Plese enter your birthday</string>
    <string name="msg_invalid_email_address">Invalid email address</string>
    <string name="close">Close</string>
    <string name="register_error">Register Error</string>
    <string name="signing_up">Signing up...</string>

    <!--FORGOT PASSWORD-->
    <string name="forgot_password_bold">Forgot password</string>
    <string name="send">Send</string>
    <string name="sending">Sending...</string>

    <!--LEFT MENU-->
    <string name="settings">SETTINGS</string>
    <string name="feed">FEED</string>
    <string name="post">POST</string>
    <string name="find">FIND</string>
    <string name="chat">CHAT</string>
    <string name="search">SEARCH</string>
    <string name="all_zpot">ALL ZPOT</string>
    <string name="msg_zpot_all">Now click to zpot all your friends.</string>
    <string name="activate_all_zpots">ACTIVATE ALL ZPOTS TO USE</string>

    <!--PROFILE-->
    <string name="profile">PROFILE</string>
    <string name="drop_capital">DROP</string>
    <string name="drops_capital">DROPS</string>
    <string name="followers_capital">FOLLOWERS</string>
    <string name="follower_capital">FOLLOWER</string>
    <string name="following_capital">FOLLOWING</string>
    <string name="followings_capital">FOLLOWINGS</string>
    <string name="msg_private_user">This user is private</string>

    <!--FIND-->
    <string name="hint_search">Search for friends to request zpot</string>
    <string name="here">Here</string>
    <string name="there">There</string>
    <string name="scan">Scan</string>

    <!--SETTINGS-->
    <string name="first_name_settings">First name:</string>
    <string name="last_name_settings">Last name:</string>
    <string name="hometown">Hometown:</string>
    <string name="date_of_birth_settings">Date of birth:</string>
    <string name="email_settings">Email:</string>
    <string name="phone_settings">Phone:</string>
    <string name="edit_picture">Edit picture</string>
    <string name="change_password">Change password</string>
    <string name="profile_color">Profile color</string>
    <string name="private_profile">Private profile</string>
    <string name="msg_private_profile">With a private profile, only people you approve can see your drops on Zpotdop.</string>
    <string name="enable_all_zpot">Enable All zpot</string>
    <string name="msg_enable_all_zpot">Allows you to zpot all your friends (follower + following) using the All zpot, but also makes you visible to them when they use the All zpot.</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>

</resources>
