<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015 Zpotdrop. All rights reserved.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:gravity="center"
                android:text="@string/forgot_password_bold"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_size_bold" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_to_border_normal"
                android:layout_marginRight="@dimen/margin_to_border_normal"
                android:layout_marginTop="@dimen/margin_extra_large"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_gray" />

            <TextView
                android:id="@+id/tv_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:gravity="center"
                android:text="@string/send"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_bold" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:drawableLeft="@drawable/ic_back"
        android:drawablePadding="@dimen/margin_extra_small"
        android:gravity="center_vertical"
        android:text="@string/back"
        android:textColor="@color/text_gray" />
</RelativeLayout>