<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015 Zpotdrop. All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.zpotdrop.view.LightEditText
            android:id="@+id/edt_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_extra_small"
            android:drawableLeft="@drawable/ic_search"
            android:drawablePadding="@dimen/margin_extra_small"
            android:hint="@string/hint_search"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.gms.maps.MapView
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_gray"
            android:orientation="horizontal">

            <com.zpotdrop.view.BoldTextView
                android:id="@+id/tv_here"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/here"
                android:textSize="@dimen/text_size_bold" />

            <com.zpotdrop.view.LightTextView
                android:id="@+id/tv_there"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0.5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/there"
                android:textSize="@dimen/text_size_bold" />

        </LinearLayout>

        <com.zpotdrop.view.BoldTextView
            android:id="@+id/tv_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/scan"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_bold" />

    </LinearLayout>

</LinearLayout>